Added support for Blogger API. Question/Answer can be auto-posted to User's blog on Blogger.com

--- a/www/style/1/www/_main.css
+++ b/www/style/1/www/_main.css
@@ -765,21 +765,21 @@ button,input[type="checkbox"],input[type="radio"],input[type="reset"],input[type
 	background: #000;
 	-moz-opacity: .10;
 	opacity: .10;
-	filter: alpha(opacity =                             
+	filter: alpha(opacity =                               
 		                                                         
 		                                                         
 		                                                                    
-		                    10);
+		                      10);
 	z-index: 9049;
 }
 
 .yui-skin-sam .yui-ac iframe {
 	opacity: 0;
-	filter: alpha(opacity =                             
+	filter: alpha(opacity =                               
 		                                                         
 		                                                         
 		                                                                     
-		                   0);
+		                     0);
 	padding-right: .3em;
 	padding-bottom: .3em;
 }
@@ -1328,11 +1328,11 @@ p#clear {
 .yui-skin-sam .yui-calcontainer .yui-cal-nav-mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =                             
+	filter: alpha(opacity =                               
 		                                                         
 		                                                         
 		                                                                    
-		                    25);
+		                      25);
 }
 
 .yui-skin-sam .yui-calcontainer .yui-cal-nav {
@@ -1723,14 +1723,14 @@ p#clear {
 
 * html .yui-picker-bg {
 	background-image: none;
-	filter: progid :          
+	filter: progid :            
 		                                                        
 		                                                        
 		                           
 		                           
 		                           
-		                          DXImageTransform.Microsoft.AlphaImageLoader
-		( 
+		                           
+		DXImageTransform.Microsoft.AlphaImageLoader (   
 		 
 		   
 		      
@@ -1750,7 +1750,8 @@ p#clear {
 		 
 		    
 		                                                                   
-		                                               src =               
+		                                                 src =
+		                
 		                                  
 		
 		 
@@ -1764,7 +1765,8 @@ p#clear {
 		                      
 		                      
 		                      
-		  '../../build/colorpicker/assets/picker_mask.png', sizingMethod =  
+		    '../../build/colorpicker/assets/picker_mask.png', sizingMethod =
+		   
 		                
 		 
 		   
@@ -1781,7 +1783,7 @@ p#clear {
 		 
 		   
 		                                                               
-		                                                     'scale' );
+		                                                       'scale' );
 }
 
 .yui-picker-mask {
@@ -1956,11 +1958,11 @@ p#clear {
 .yui-skin-sam .mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =                             
+	filter: alpha(opacity =                               
 		                                                         
 		                                                         
 		                                                                    
-		                    25);
+		                      25);
 }
 
 .yui-skin-sam .yui-panel-container {
@@ -2065,11 +2067,11 @@ p#clear {
 	_margin-left: -1px;
 	background-color: #000;
 	opacity: .12;
-	filter: alpha(opacity =                             
+	filter: alpha(opacity =                               
 		                                                         
 		                                                         
 		                                                                    
-		                    12);
+		                      12);
 }
 
 .yui-skin-sam .yui-dialog .ft {
@@ -2185,11 +2187,11 @@ p#clear {
 
 .yui-skin-sam .yui-tt-shadow-visible {
 	opacity: .12;
-	filter: alpha(opacity =                             
+	filter: alpha(opacity =                               
 		                                                         
 		                                                         
 		                                                                    
-		                    12);
+		                      12);
 }
 
 .yui-skin-sam .yui-dt-mask {
@@ -2251,11 +2253,11 @@ th.yui-dt-resizeable .yui-dt-resizerliner {
 	cursor: col-resize;
 	background-color: #CCC;
 	opacity: 0;
-	filter: alpha(opacity =                             
+	filter: alpha(opacity =                               
 		                                                         
 		                                                         
 		                                                                     
-		                   0);
+		                     0);
 }
 
 .yui-dt-resizerproxy {
@@ -2264,11 +2266,11 @@ th.yui-dt-resizeable .yui-dt-resizerliner {
 	z-index: 9000;
 	background-color: #CCC;
 	opacity: 0;
-	filter: alpha(opacity =                             
+	filter: alpha(opacity =                               
 		                                                         
 		                                                         
 		                                                                     
-		                   0);
+		                     0);
 }
 
 th.yui-dt-hidden .yui-dt-liner,td.yui-dt-hidden .yui-dt-liner,th.yui-dt-hidden .yui-dt-resizer
@@ -2364,11 +2366,11 @@ th.yui-dt-hidden .yui-dt-liner,td.yui-dt-hidden .yui-dt-liner,th.yui-dt-hidden .
 .yui-skin-sam .yui-dt-mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =                             
+	filter: alpha(opacity =                               
 		                                                         
 		                                                         
 		                                                                    
-		                    25);
+		                      25);
 }
 
 .yui-skin-sam .yui-dt-message {
@@ -2755,21 +2757,21 @@ tbody .yui-dt-editable {
 
 .yui-toolbar-container .yui-button-disabled .yui-toolbar-icon {
 	opacity: .5;
-	filter: alpha(opacity =                             
+	filter: alpha(opacity =                               
 		                                                         
 		                                                         
 		                                                                    
-		                    50);
+		                      50);
 }
 
 .yui-toolbar-container .yui-button-disabled .up,.yui-toolbar-container .yui-button-disabled .down
 	{
 	opacity: .5;
-	filter: alpha(opacity =                             
+	filter: alpha(opacity =                               
 		                                                         
 		                                                         
 		                                                                    
-		                    50);
+		                      50);
 }
 
 .yui-toolbar-container .yui-button a {
@@ -2867,11 +2869,11 @@ tbody .yui-dt-editable {
 	top: 0;
 	left: 0;
 	opacity: .5;
-	filter: alpha(opacity =                             
+	filter: alpha(opacity =                               
 		                                                         
 		                                                         
 		                                                                    
-		                    50);
+		                      50);
 }
 
 .yui-editor-container iframe {
@@ -3972,11 +3974,11 @@ h2.yui-editor-skipheader,h3.yui-editor-skipheader {
 .yui-skin-sam .yui-crop .yui-crop-mask {
 	background-color: #000;
 	opacity: .5;
-	filter: alpha(opacity =                             
+	filter: alpha(opacity =                               
 		                                                         
 		                                                         
 		                                                                    
-		                    50);
+		                      50);
 }
 
 .yui-skin-sam .yui-crop .yui-resize {
@@ -4743,11 +4745,11 @@ body.yui-layout {
 .yui-skin-sam .yui-menu-shadow-visible {
 	background-color: #000;
 	opacity: .12;
-	filter: alpha(opacity =                             
+	filter: alpha(opacity =                               
 		                                                         
 		                                                         
 		                                                                    
-		                    12);
+		                      12);
 }
 
 .yui-skin-sam .yuimenuitem-selected {
@@ -5258,20 +5260,20 @@ body.yui-layout {
 .yui-resize-hover .yui-resize-handle,.yui-resize-hidden .yui-resize-handle
 	{
 	opacity: 0;
-	filter: alpha(opacity =                             
+	filter: alpha(opacity =                               
 		                                                         
 		                                                         
 		                                                                     
-		                   0);
+		                     0);
 }
 
 .yui-resize-ghost {
 	opacity: .5;
-	filter: alpha(opacity =                             
+	filter: alpha(opacity =                               
 		                                                         
 		                                                         
 		                                                                    
-		                    50);
+		                      50);
 }
 
 .yui-resize-knob .yui-resize-handle {
@@ -5359,11 +5361,11 @@ body.yui-layout {
 
 .yui-skin-sam .yui-resize-hover .yui-resize-handle-active {
 	opacity: 1;
-	filter: alpha(opacity =                            
+	filter: alpha(opacity =                              
 		                                                         
 		                                                         
 		                                                                   
-		                      100);
+		                        100);
 }
 
 .yui-skin-sam .yui-resize-proxy {
@@ -5619,21 +5621,21 @@ body.yui-layout {
 
 .yui-toolbar-container .yui-button-disabled .yui-toolbar-icon {
 	opacity: .5;
-	filter: alpha(opacity =                             
+	filter: alpha(opacity =                               
 		                                                         
 		                                                         
 		                                                                    
-		                    50);
+		                      50);
 }
 
 .yui-toolbar-container .yui-button-disabled .up,.yui-toolbar-container .yui-button-disabled .down
 	{
 	opacity: .5;
-	filter: alpha(opacity =                             
+	filter: alpha(opacity =                               
 		                                                         
 		                                                         
 		                                                                    
-		                    50);
+		                      50);
 }
 
 .yui-toolbar-container .yui-button a {
@@ -5731,11 +5733,11 @@ body.yui-layout {
 	top: 0;
 	left: 0;
 	opacity: .5;
-	filter: alpha(opacity =                             
+	filter: alpha(opacity =                               
 		                                                         
 		                                                         
 		                                                                    
-		                    50);
+		                      50);
 }
 
 .yui-editor-container iframe {
@@ -7772,12 +7774,12 @@ a#asignup {
 	background-color: #19558D;
 	-ms-filter:
 		"progid:DXImageTransform.Microsoft.gradient(startColorstr='#0000FF', endColorstr='#19558D')";
-	filter: progid :
+	filter: progid :  
 		                                                        
 		                                                        
 		                                   
 		                                   
-		                    DXImageTransform.Microsoft.gradient (    
+		                      DXImageTransform.Microsoft.gradient (      
 		                  
 		
 		 
@@ -7790,7 +7792,7 @@ a#asignup {
 		        
 		                 
 		                                                         
-		                                           startColorstr = 
+		                                             startColorstr =   
 		              
 		                             
 		 
@@ -7799,7 +7801,7 @@ a#asignup {
 		              
 		                            
 		                                                             
-		                "#0000FF", endColorstr =
+		                  "#0000FF", endColorstr =  
 		                               
 		 
 		  
@@ -7809,7 +7811,7 @@ a#asignup {
 		 
 		      
 		                                                             
-		                          "#19558D" );
+		                            "#19558D" );
 	background: -webkit-gradient(linear, left top, left bottom, from(#0000FF),
 		to(#19558D) );
 	background: -moz-linear-gradient(top, #0000FF, #19558D);
@@ -8401,11 +8403,11 @@ li.tsearch {
 	background: -moz-linear-gradient(top, #A7BBCC, #879BAD);
 	-ms-filter:
 		"progid:DXImageTransform.Microsoft.gradient(startColorstr='#A7BBCC', endColorstr='#879BAD')";
-	filter: progid :                                            
+	filter: progid :                                              
 		                                                        
 		                                   
 		                                   
-		       DXImageTransform.Microsoft.gradient (          
+		         DXImageTransform.Microsoft.gradient (            
 		
 		 
 		    
@@ -8419,7 +8421,7 @@ li.tsearch {
 		  
 		       
 		                                                         
-		                              startColorstr =   
+		                                startColorstr =     
 		                             
 		 
 		   
@@ -8427,7 +8429,7 @@ li.tsearch {
 		              
 		                            
 		                                                             
-		                            "#A7BBCC", endColorstr =            
+		                              "#A7BBCC", endColorstr =              
 		                               
 		 
 		   
@@ -8435,7 +8437,7 @@ li.tsearch {
 		              
 		                             
 		                                                             
-		               "#879BAD" );
+		                 "#879BAD" );
 	background: -webkit-gradient(linear, left top, left bottom, from(#A7BBCC),
 		to(#879BAD) );
 	background: -moz-linear-gradient(top, #A7BBCC, #879BAD);
@@ -9111,7 +9113,7 @@ table.question_table {
 	width: 98%;
 }
 
-td.td_question, td.td_answer {
+td.td_question,td.td_answer {
 	vertical-align: top;
 	width: 615px;
 }
@@ -9672,7 +9674,7 @@ div.imgloader {
 }
 
 a.pri1:before {
-	content: url('/images/pin.png')
+	content: url('/images/pin.png');
 }
 
 a.pri1:after {
@@ -10229,16 +10231,33 @@ div.bg6 input {
 	margin-top: 2px;
 }
 
-div.bg6 {
+.bg6 {
 	float: left;
 	min-height: 18px;
 	height: 18px;
 	padding-left: 22px;
+	vertical-align: middle;
 }
 
 div.social_post span {
 	margin-left: 6px;
 	float: left;
+}
+
+a.tmblr:before {
+	content: url('/images/tumblr_16.png');
+}
+
+a.fbook:before {
+	content: url('/images/facebook_16.png');
+}
+
+a.twtr:before {
+	content: url('/images/tw-user.png');
+}
+
+a.blgr:before {
+	content: url('/images/blogger_16.png');
 }
 
 .bg_tweet {
