Improvement in Blogger API - modified EntryInterface to require HTMLString as input

--- a/www/style/1/www/_main.css
+++ b/www/style/1/www/_main.css
@@ -9110,7 +9110,7 @@ div.credit a {
 table.question_table {
 	position: relative;
 	float: left;
-	width: 98%;
+	width: 725px;
 }
 
 td.td_question,td.td_answer {
