--- a/www/style/1/www/_main.css
+++ b/www/style/1/www/_main.css
@@ -765,21 +765,21 @@ button,input[type="checkbox"],input[type="radio"],input[type="reset"],input[type
 	background: #000;
 	-moz-opacity: .10;
 	opacity: .10;
-	filter: alpha(opacity =                               
+	filter: alpha(opacity =                                   
 		                                                         
 		                                                         
 		                                                                    
-		                      10);
+		                          10);
 	z-index: 9049;
 }
 
 .yui-skin-sam .yui-ac iframe {
 	opacity: 0;
-	filter: alpha(opacity =                               
+	filter: alpha(opacity =                                   
 		                                                         
 		                                                         
 		                                                                     
-		                     0);
+		                         0);
 	padding-right: .3em;
 	padding-bottom: .3em;
 }
@@ -1328,11 +1328,11 @@ p#clear {
 .yui-skin-sam .yui-calcontainer .yui-cal-nav-mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =                               
+	filter: alpha(opacity =                                   
 		                                                         
 		                                                         
 		                                                                    
-		                      25);
+		                          25);
 }
 
 .yui-skin-sam .yui-calcontainer .yui-cal-nav {
@@ -1723,14 +1723,14 @@ p#clear {
 
 * html .yui-picker-bg {
 	background-image: none;
-	filter: progid :            
+	filter: progid :                
 		                                                        
 		                                                        
 		                           
 		                           
 		                           
 		                           
-		DXImageTransform.Microsoft.AlphaImageLoader (   
+		    DXImageTransform.Microsoft.AlphaImageLoader (       
 		 
 		   
 		      
@@ -1750,7 +1750,7 @@ p#clear {
 		 
 		    
 		                                                                   
-		                                                 src =
+		                                                     src =    
 		                
 		                                  
 		
@@ -1765,7 +1765,9 @@ p#clear {
 		                      
 		                      
 		                      
-		    '../../build/colorpicker/assets/picker_mask.png', sizingMethod =
+		        '../../build/colorpicker/assets/picker_mask.png', sizingMethod
+		=  
+		 
 		   
 		                
 		 
@@ -1783,7 +1785,7 @@ p#clear {
 		 
 		   
 		                                                               
-		                                                       'scale' );
+		                                                           'scale' );
 }
 
 .yui-picker-mask {
@@ -1958,11 +1960,11 @@ p#clear {
 .yui-skin-sam .mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =                               
+	filter: alpha(opacity =                                   
 		                                                         
 		                                                         
 		                                                                    
-		                      25);
+		                          25);
 }
 
 .yui-skin-sam .yui-panel-container {
@@ -2067,11 +2069,11 @@ p#clear {
 	_margin-left: -1px;
 	background-color: #000;
 	opacity: .12;
-	filter: alpha(opacity =                               
+	filter: alpha(opacity =                                   
 		                                                         
 		                                                         
 		                                                                    
-		                      12);
+		                          12);
 }
 
 .yui-skin-sam .yui-dialog .ft {
@@ -2187,11 +2189,11 @@ p#clear {
 
 .yui-skin-sam .yui-tt-shadow-visible {
 	opacity: .12;
-	filter: alpha(opacity =                               
+	filter: alpha(opacity =                                   
 		                                                         
 		                                                         
 		                                                                    
-		                      12);
+		                          12);
 }
 
 .yui-skin-sam .yui-dt-mask {
@@ -2253,11 +2255,11 @@ th.yui-dt-resizeable .yui-dt-resizerliner {
 	cursor: col-resize;
 	background-color: #CCC;
 	opacity: 0;
-	filter: alpha(opacity =                               
+	filter: alpha(opacity =                                   
 		                                                         
 		                                                         
 		                                                                     
-		                     0);
+		                         0);
 }
 
 .yui-dt-resizerproxy {
@@ -2266,11 +2268,11 @@ th.yui-dt-resizeable .yui-dt-resizerliner {
 	z-index: 9000;
 	background-color: #CCC;
 	opacity: 0;
-	filter: alpha(opacity =                               
+	filter: alpha(opacity =                                   
 		                                                         
 		                                                         
 		                                                                     
-		                     0);
+		                         0);
 }
 
 th.yui-dt-hidden .yui-dt-liner,td.yui-dt-hidden .yui-dt-liner,th.yui-dt-hidden .yui-dt-resizer
@@ -2366,11 +2368,11 @@ th.yui-dt-hidden .yui-dt-liner,td.yui-dt-hidden .yui-dt-liner,th.yui-dt-hidden .
 .yui-skin-sam .yui-dt-mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =                               
+	filter: alpha(opacity =                                   
 		                                                         
 		                                                         
 		                                                                    
-		                      25);
+		                          25);
 }
 
 .yui-skin-sam .yui-dt-message {
@@ -2757,21 +2759,21 @@ tbody .yui-dt-editable {
 
 .yui-toolbar-container .yui-button-disabled .yui-toolbar-icon {
 	opacity: .5;
-	filter: alpha(opacity =                               
+	filter: alpha(opacity =                                   
 		                                                         
 		                                                         
 		                                                                    
-		                      50);
+		                          50);
 }
 
 .yui-toolbar-container .yui-button-disabled .up,.yui-toolbar-container .yui-button-disabled .down
 	{
 	opacity: .5;
-	filter: alpha(opacity =                               
+	filter: alpha(opacity =                                   
 		                                                         
 		                                                         
 		                                                                    
-		                      50);
+		                          50);
 }
 
 .yui-toolbar-container .yui-button a {
@@ -2869,11 +2871,11 @@ tbody .yui-dt-editable {
 	top: 0;
 	left: 0;
 	opacity: .5;
-	filter: alpha(opacity =                               
+	filter: alpha(opacity =                                   
 		                                                         
 		                                                         
 		                                                                    
-		                      50);
+		                          50);
 }
 
 .yui-editor-container iframe {
@@ -3974,11 +3976,11 @@ h2.yui-editor-skipheader,h3.yui-editor-skipheader {
 .yui-skin-sam .yui-crop .yui-crop-mask {
 	background-color: #000;
 	opacity: .5;
-	filter: alpha(opacity =                               
+	filter: alpha(opacity =                                   
 		                                                         
 		                                                         
 		                                                                    
-		                      50);
+		                          50);
 }
 
 .yui-skin-sam .yui-crop .yui-resize {
@@ -4745,11 +4747,11 @@ body.yui-layout {
 .yui-skin-sam .yui-menu-shadow-visible {
 	background-color: #000;
 	opacity: .12;
-	filter: alpha(opacity =                               
+	filter: alpha(opacity =                                   
 		                                                         
 		                                                         
 		                                                                    
-		                      12);
+		                          12);
 }
 
 .yui-skin-sam .yuimenuitem-selected {
@@ -5260,20 +5262,20 @@ body.yui-layout {
 .yui-resize-hover .yui-resize-handle,.yui-resize-hidden .yui-resize-handle
 	{
 	opacity: 0;
-	filter: alpha(opacity =                               
+	filter: alpha(opacity =                                   
 		                                                         
 		                                                         
 		                                                                     
-		                     0);
+		                         0);
 }
 
 .yui-resize-ghost {
 	opacity: .5;
-	filter: alpha(opacity =                               
+	filter: alpha(opacity =                                   
 		                                                         
 		                                                         
 		                                                                    
-		                      50);
+		                          50);
 }
 
 .yui-resize-knob .yui-resize-handle {
@@ -5361,11 +5363,11 @@ body.yui-layout {
 
 .yui-skin-sam .yui-resize-hover .yui-resize-handle-active {
 	opacity: 1;
-	filter: alpha(opacity =                              
+	filter: alpha(opacity =                                  
 		                                                         
 		                                                         
 		                                                                   
-		                        100);
+		                            100);
 }
 
 .yui-skin-sam .yui-resize-proxy {
@@ -5621,21 +5623,21 @@ body.yui-layout {
 
 .yui-toolbar-container .yui-button-disabled .yui-toolbar-icon {
 	opacity: .5;
-	filter: alpha(opacity =                               
+	filter: alpha(opacity =                                   
 		                                                         
 		                                                         
 		                                                                    
-		                      50);
+		                          50);
 }
 
 .yui-toolbar-container .yui-button-disabled .up,.yui-toolbar-container .yui-button-disabled .down
 	{
 	opacity: .5;
-	filter: alpha(opacity =                               
+	filter: alpha(opacity =                                   
 		                                                         
 		                                                         
 		                                                                    
-		                      50);
+		                          50);
 }
 
 .yui-toolbar-container .yui-button a {
@@ -5733,11 +5735,11 @@ body.yui-layout {
 	top: 0;
 	left: 0;
 	opacity: .5;
-	filter: alpha(opacity =                               
+	filter: alpha(opacity =                                   
 		                                                         
 		                                                         
 		                                                                    
-		                      50);
+		                          50);
 }
 
 .yui-editor-container iframe {
@@ -7774,12 +7776,13 @@ a#asignup {
 	background-color: #19558D;
 	-ms-filter:
 		"progid:DXImageTransform.Microsoft.gradient(startColorstr='#0000FF', endColorstr='#19558D')";
-	filter: progid :  
+	filter: progid :      
 		                                                        
 		                                                        
 		                                   
 		                                   
-		                      DXImageTransform.Microsoft.gradient (      
+		                          DXImageTransform.Microsoft.gradient ( 
+		        
 		                  
 		
 		 
@@ -7792,7 +7795,8 @@ a#asignup {
 		        
 		                 
 		                                                         
-		                                             startColorstr =   
+		                                                 startColorstr =
+		      
 		              
 		                             
 		 
@@ -7801,7 +7805,7 @@ a#asignup {
 		              
 		                            
 		                                                             
-		                  "#0000FF", endColorstr =  
+		                      "#0000FF", endColorstr =      
 		                               
 		 
 		  
@@ -7811,7 +7815,7 @@ a#asignup {
 		 
 		      
 		                                                             
-		                            "#19558D" );
+		                                "#19558D" );
 	background: -webkit-gradient(linear, left top, left bottom, from(#0000FF),
 		to(#19558D) );
 	background: -moz-linear-gradient(top, #0000FF, #19558D);
@@ -7889,7 +7893,7 @@ h3 {
 	margin-bottom: 5px;
 	margin-right: 5px;
 	width: 610px;
-	overflow: auto;
+	overflow-x: auto;
 }
 
 #tools {
@@ -8403,11 +8407,11 @@ li.tsearch {
 	background: -moz-linear-gradient(top, #A7BBCC, #879BAD);
 	-ms-filter:
 		"progid:DXImageTransform.Microsoft.gradient(startColorstr='#A7BBCC', endColorstr='#879BAD')";
-	filter: progid :                                              
+	filter: progid :                                                  
 		                                                        
 		                                   
 		                                   
-		         DXImageTransform.Microsoft.gradient (            
+		             DXImageTransform.Microsoft.gradient (                
 		
 		 
 		    
@@ -8421,7 +8425,7 @@ li.tsearch {
 		  
 		       
 		                                                         
-		                                startColorstr =     
+		                                    startColorstr =         
 		                             
 		 
 		   
@@ -8429,7 +8433,8 @@ li.tsearch {
 		              
 		                            
 		                                                             
-		                              "#A7BBCC", endColorstr =              
+		                                  "#A7BBCC", endColorstr =  
+		               
 		                               
 		 
 		   
@@ -8437,7 +8442,7 @@ li.tsearch {
 		              
 		                             
 		                                                             
-		                 "#879BAD" );
+		                     "#879BAD" );
 	background: -webkit-gradient(linear, left top, left bottom, from(#A7BBCC),
 		to(#879BAD) );
 	background: -moz-linear-gradient(top, #A7BBCC, #879BAD);
@@ -8904,7 +8909,7 @@ a.link {
 	border: 2px dotted #CCC;
 	text-align: left;
 	min-height: 20px;
-	overflow: auto;
+	overflow-x: auto;
 }
 
 #body_preview pre {
@@ -8915,7 +8920,7 @@ a.link {
 	margin-bottom: 10px;
 	/*max-height: 600px;
 	*/
-	overflow: auto;
+	overflow-x: auto;
 	padding: 5px;
 	width: auto;
 	white-space: pre;
@@ -8974,7 +8979,7 @@ pre {
 	padding: 10px;
 	margin-bottom: 10px;
 	max-height: 600px;
-	overflow: auto;
+	overflow-x: auto;
 	padding: 5px;
 	width: 600px;
 }
@@ -10177,7 +10182,6 @@ table.user_stuff {
 	white-space: pre;
 	height: 90px;
 	background-color: #EEE;
-	overflow: auto;
 }
 
 td.ar {
@@ -10278,4 +10282,58 @@ a.blgr:before {
 
 .bg_blogger {
 	background: url('/images/blogger_16.png') no-repeat;
+}
+
+#btn_youtube span.yui-toolbar-icon {
+	background-image: url( "/images/youtube_16.png" ) !important;
+	background-position: 1px 0px;
+	top: 2px;
+	left: 4px;
+}
+
+#media_control {
+	display: block;
+}
+
+#media_cont {
+	position: relative;
+	float: left;
+	margin-top: 6px;
+	margin-bottom: 6px;
+}
+
+img._yt_thumb {
+	position: relative;
+	float: left;
+	clear: both;
+}
+
+.play_vid,a.ytvid {
+	margin-left: 37px;
+	margin-top: 23px;
+	position: absolute;
+	width: 44px;
+}
+
+.ytvideo {
+	cursor: pointer;
+	border: 1px solid black;
+	width: 120px;
+	height: 90px;
+	min-width: 120px;
+	min-height: 90px;
+	overflow: none;
+}
+
+.ytplay {
+	position: absolute;
+	display: block;
+	height: 44px;
+	width: 44px;
+	top: 23px;
+	left: 37px;
+}
+
+.bg_black {
+	background-color: #000000;
 }
