--- a/www/style/1/www/_main.css
+++ b/www/style/1/www/_main.css
@@ -765,21 +765,21 @@ button,input[type="checkbox"],input[type="radio"],input[type="reset"],input[type
 	background: #000;
 	-moz-opacity: .10;
 	opacity: .10;
-	filter: alpha(opacity =                                   
+	filter: alpha(opacity =                                      
 		                                                         
 		                                                         
 		                                                                    
-		                          10);
+		                             10);
 	z-index: 9049;
 }
 
 .yui-skin-sam .yui-ac iframe {
 	opacity: 0;
-	filter: alpha(opacity =                                   
+	filter: alpha(opacity =                                      
 		                                                         
 		                                                         
 		                                                                     
-		                         0);
+		                            0);
 	padding-right: .3em;
 	padding-bottom: .3em;
 }
@@ -1328,11 +1328,11 @@ p#clear {
 .yui-skin-sam .yui-calcontainer .yui-cal-nav-mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =                                   
+	filter: alpha(opacity =                                      
 		                                                         
 		                                                         
 		                                                                    
-		                          25);
+		                             25);
 }
 
 .yui-skin-sam .yui-calcontainer .yui-cal-nav {
@@ -1723,14 +1723,14 @@ p#clear {
 
 * html .yui-picker-bg {
 	background-image: none;
-	filter: progid :                
+	filter: progid :                   
 		                                                        
 		                                                        
 		                           
 		                           
 		                           
 		                           
-		    DXImageTransform.Microsoft.AlphaImageLoader (       
+		       DXImageTransform.Microsoft.AlphaImageLoader (          
 		 
 		   
 		      
@@ -1750,7 +1750,7 @@ p#clear {
 		 
 		    
 		                                                                   
-		                                                     src =    
+		                                                        src =       
 		                
 		                                  
 		
@@ -1765,8 +1765,8 @@ p#clear {
 		                      
 		                      
 		                      
-		        '../../build/colorpicker/assets/picker_mask.png', sizingMethod
-		=  
+		           '../../build/colorpicker/assets/picker_mask.png',
+		sizingMethod =     
 		 
 		   
 		                
@@ -1785,7 +1785,8 @@ p#clear {
 		 
 		   
 		                                                               
-		                                                           'scale' );
+		                                                              'scale'
+		);
 }
 
 .yui-picker-mask {
@@ -1960,11 +1961,11 @@ p#clear {
 .yui-skin-sam .mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =                                   
+	filter: alpha(opacity =                                      
 		                                                         
 		                                                         
 		                                                                    
-		                          25);
+		                             25);
 }
 
 .yui-skin-sam .yui-panel-container {
@@ -2069,11 +2070,11 @@ p#clear {
 	_margin-left: -1px;
 	background-color: #000;
 	opacity: .12;
-	filter: alpha(opacity =                                   
+	filter: alpha(opacity =                                      
 		                                                         
 		                                                         
 		                                                                    
-		                          12);
+		                             12);
 }
 
 .yui-skin-sam .yui-dialog .ft {
@@ -2189,11 +2190,11 @@ p#clear {
 
 .yui-skin-sam .yui-tt-shadow-visible {
 	opacity: .12;
-	filter: alpha(opacity =                                   
+	filter: alpha(opacity =                                      
 		                                                         
 		                                                         
 		                                                                    
-		                          12);
+		                             12);
 }
 
 .yui-skin-sam .yui-dt-mask {
@@ -2255,11 +2256,11 @@ th.yui-dt-resizeable .yui-dt-resizerliner {
 	cursor: col-resize;
 	background-color: #CCC;
 	opacity: 0;
-	filter: alpha(opacity =                                   
+	filter: alpha(opacity =                                      
 		                                                         
 		                                                         
 		                                                                     
-		                         0);
+		                            0);
 }
 
 .yui-dt-resizerproxy {
@@ -2268,11 +2269,11 @@ th.yui-dt-resizeable .yui-dt-resizerliner {
 	z-index: 9000;
 	background-color: #CCC;
 	opacity: 0;
-	filter: alpha(opacity =                                   
+	filter: alpha(opacity =                                      
 		                                                         
 		                                                         
 		                                                                     
-		                         0);
+		                            0);
 }
 
 th.yui-dt-hidden .yui-dt-liner,td.yui-dt-hidden .yui-dt-liner,th.yui-dt-hidden .yui-dt-resizer
@@ -2368,11 +2369,11 @@ th.yui-dt-hidden .yui-dt-liner,td.yui-dt-hidden .yui-dt-liner,th.yui-dt-hidden .
 .yui-skin-sam .yui-dt-mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =                                   
+	filter: alpha(opacity =                                      
 		                                                         
 		                                                         
 		                                                                    
-		                          25);
+		                             25);
 }
 
 .yui-skin-sam .yui-dt-message {
@@ -2759,21 +2760,21 @@ tbody .yui-dt-editable {
 
 .yui-toolbar-container .yui-button-disabled .yui-toolbar-icon {
 	opacity: .5;
-	filter: alpha(opacity =                                   
+	filter: alpha(opacity =                                      
 		                                                         
 		                                                         
 		                                                                    
-		                          50);
+		                             50);
 }
 
 .yui-toolbar-container .yui-button-disabled .up,.yui-toolbar-container .yui-button-disabled .down
 	{
 	opacity: .5;
-	filter: alpha(opacity =                                   
+	filter: alpha(opacity =                                      
 		                                                         
 		                                                         
 		                                                                    
-		                          50);
+		                             50);
 }
 
 .yui-toolbar-container .yui-button a {
@@ -2871,11 +2872,11 @@ tbody .yui-dt-editable {
 	top: 0;
 	left: 0;
 	opacity: .5;
-	filter: alpha(opacity =                                   
+	filter: alpha(opacity =                                      
 		                                                         
 		                                                         
 		                                                                    
-		                          50);
+		                             50);
 }
 
 .yui-editor-container iframe {
@@ -3976,11 +3977,11 @@ h2.yui-editor-skipheader,h3.yui-editor-skipheader {
 .yui-skin-sam .yui-crop .yui-crop-mask {
 	background-color: #000;
 	opacity: .5;
-	filter: alpha(opacity =                                   
+	filter: alpha(opacity =                                      
 		                                                         
 		                                                         
 		                                                                    
-		                          50);
+		                             50);
 }
 
 .yui-skin-sam .yui-crop .yui-resize {
@@ -4747,11 +4748,11 @@ body.yui-layout {
 .yui-skin-sam .yui-menu-shadow-visible {
 	background-color: #000;
 	opacity: .12;
-	filter: alpha(opacity =                                   
+	filter: alpha(opacity =                                      
 		                                                         
 		                                                         
 		                                                                    
-		                          12);
+		                             12);
 }
 
 .yui-skin-sam .yuimenuitem-selected {
@@ -5262,20 +5263,20 @@ body.yui-layout {
 .yui-resize-hover .yui-resize-handle,.yui-resize-hidden .yui-resize-handle
 	{
 	opacity: 0;
-	filter: alpha(opacity =                                   
+	filter: alpha(opacity =                                      
 		                                                         
 		                                                         
 		                                                                     
-		                         0);
+		                            0);
 }
 
 .yui-resize-ghost {
 	opacity: .5;
-	filter: alpha(opacity =                                   
+	filter: alpha(opacity =                                      
 		                                                         
 		                                                         
 		                                                                    
-		                          50);
+		                             50);
 }
 
 .yui-resize-knob .yui-resize-handle {
@@ -5363,11 +5364,11 @@ body.yui-layout {
 
 .yui-skin-sam .yui-resize-hover .yui-resize-handle-active {
 	opacity: 1;
-	filter: alpha(opacity =                                  
+	filter: alpha(opacity =                                     
 		                                                         
 		                                                         
 		                                                                   
-		                            100);
+		                               100);
 }
 
 .yui-skin-sam .yui-resize-proxy {
@@ -5623,21 +5624,21 @@ body.yui-layout {
 
 .yui-toolbar-container .yui-button-disabled .yui-toolbar-icon {
 	opacity: .5;
-	filter: alpha(opacity =                                   
+	filter: alpha(opacity =                                      
 		                                                         
 		                                                         
 		                                                                    
-		                          50);
+		                             50);
 }
 
 .yui-toolbar-container .yui-button-disabled .up,.yui-toolbar-container .yui-button-disabled .down
 	{
 	opacity: .5;
-	filter: alpha(opacity =                                   
+	filter: alpha(opacity =                                      
 		                                                         
 		                                                         
 		                                                                    
-		                          50);
+		                             50);
 }
 
 .yui-toolbar-container .yui-button a {
@@ -5735,11 +5736,11 @@ body.yui-layout {
 	top: 0;
 	left: 0;
 	opacity: .5;
-	filter: alpha(opacity =                                   
+	filter: alpha(opacity =                                      
 		                                                         
 		                                                         
 		                                                                    
-		                          50);
+		                             50);
 }
 
 .yui-editor-container iframe {
@@ -7776,12 +7777,12 @@ a#asignup {
 	background-color: #19558D;
 	-ms-filter:
 		"progid:DXImageTransform.Microsoft.gradient(startColorstr='#0000FF', endColorstr='#19558D')";
-	filter: progid :      
+	filter: progid :         
 		                                                        
 		                                                        
 		                                   
 		                                   
-		                          DXImageTransform.Microsoft.gradient ( 
+		                             DXImageTransform.Microsoft.gradient (    
 		        
 		                  
 		
@@ -7795,7 +7796,7 @@ a#asignup {
 		        
 		                 
 		                                                         
-		                                                 startColorstr =
+		                                                    startColorstr =   
 		      
 		              
 		                             
@@ -7805,7 +7806,7 @@ a#asignup {
 		              
 		                            
 		                                                             
-		                      "#0000FF", endColorstr =      
+		                         "#0000FF", endColorstr =         
 		                               
 		 
 		  
@@ -7815,7 +7816,7 @@ a#asignup {
 		 
 		      
 		                                                             
-		                                "#19558D" );
+		                                   "#19558D" );
 	background: -webkit-gradient(linear, left top, left bottom, from(#0000FF),
 		to(#19558D) );
 	background: -moz-linear-gradient(top, #0000FF, #19558D);
@@ -7887,13 +7888,22 @@ h3 {
 	font-weight: bold;
 }
 
+#qview-body {
+	width: 720px;
+}
+
+div#layout1 div#qview-body {
+	width: 100% !important;
+}
+
 #qview-body div.question-body {
 	font-size: 110%;
 	line-height: 130%;
 	margin-bottom: 5px;
 	margin-right: 5px;
 	width: 610px;
-	overflow-x: auto;
+	/*overflow-x: auto;
+*/
 }
 
 #tools {
@@ -8407,11 +8417,12 @@ li.tsearch {
 	background: -moz-linear-gradient(top, #A7BBCC, #879BAD);
 	-ms-filter:
 		"progid:DXImageTransform.Microsoft.gradient(startColorstr='#A7BBCC', endColorstr='#879BAD')";
-	filter: progid :                                                  
+	filter: progid :                                                     
 		                                                        
 		                                   
 		                                   
-		             DXImageTransform.Microsoft.gradient (                
+		                DXImageTransform.Microsoft.gradient (
+		                  
 		
 		 
 		    
@@ -8425,7 +8436,7 @@ li.tsearch {
 		  
 		       
 		                                                         
-		                                    startColorstr =         
+		                                       startColorstr =            
 		                             
 		 
 		   
@@ -8433,7 +8444,7 @@ li.tsearch {
 		              
 		                            
 		                                                             
-		                                  "#A7BBCC", endColorstr =  
+		                                     "#A7BBCC", endColorstr =     
 		               
 		                               
 		 
@@ -8442,7 +8453,7 @@ li.tsearch {
 		              
 		                             
 		                                                             
-		                     "#879BAD" );
+		                        "#879BAD" );
 	background: -webkit-gradient(linear, left top, left bottom, from(#A7BBCC),
 		to(#879BAD) );
 	background: -moz-linear-gradient(top, #A7BBCC, #879BAD);
@@ -8526,8 +8537,9 @@ div.t2 {
 }
 
 .smmry2 {
+	position: relative;
 	float: left;
-	width: 500px;
+	width: 370px;
 }
 
 .tgs2 { /*width: 50%;
@@ -8563,12 +8575,11 @@ div.t2 {
 	width: 100%;
 }
 
-.controls {
-	color: #888;
-}
-
-td.td_question div.controls {
-	margin-top: 6px;
+div.controls {
+	clear: both;
+	color: #888888;
+	float: left;
+	margin-top: 10px;
 }
 
 .lighttext {
@@ -8781,6 +8792,10 @@ div.tag1 span.ts {
 		'Courier New', monospace, serif;
 	*/
 	font-size: 120%;
+}
+
+.com_hand {
+	cursor: pointer;
 }
 
 .form_el .com_hand {
@@ -9115,12 +9130,12 @@ div.credit a {
 table.question_table {
 	position: relative;
 	float: left;
-	width: 725px;
+	width: 720px;
 }
 
 td.td_question,td.td_answer {
 	vertical-align: top;
-	width: 615px;
+	width: 610px;
 }
 
 .rq,.fl {
@@ -10287,7 +10302,7 @@ a.blgr:before {
 #btn_youtube span.yui-toolbar-icon {
 	background-image: url( "/images/youtube_16.png" ) !important;
 	background-position: 1px 0px;
-	top: 2px;
+	top: 3px;
 	left: 4px;
 }
 
@@ -10302,27 +10317,17 @@ a.blgr:before {
 	margin-bottom: 6px;
 }
 
-img._yt_thumb {
-	position: relative;
-	float: left;
-	clear: both;
-}
-
-.play_vid,a.ytvid {
-	margin-left: 37px;
-	margin-top: 23px;
-	position: absolute;
-	width: 44px;
-}
-
 .ytvideo {
-	cursor: pointer;
+	position: relative;
+	clear: both;
+	margin-right: 5px; cursor : pointer;
 	border: 1px solid black;
 	width: 120px;
 	height: 90px;
 	min-width: 120px;
 	min-height: 90px;
 	overflow: none;
+	cursor: pointer;
 }
 
 .ytplay {
@@ -10331,7 +10336,7 @@ img._yt_thumb {
 	height: 44px;
 	width: 44px;
 	top: 23px;
-	left: 37px;
+	left: 38px;
 }
 
 .bg_black {
