Added new API controllers, Added auto-complete for tags

--- a/www/style/1/www/_main.css
+++ b/www/style/1/www/_main.css
@@ -765,21 +765,21 @@ button,input[type="checkbox"],input[type="radio"],input[type="reset"],input[type
 	background: #000;
 	-moz-opacity: .10;
 	opacity: .10;
-	filter: alpha(opacity =                                      
+	filter: alpha(opacity =                                        
 		                                                         
 		                                                         
 		                                                                    
-		                             10);
+		                               10);
 	z-index: 9049;
 }
 
 .yui-skin-sam .yui-ac iframe {
 	opacity: 0;
-	filter: alpha(opacity =                                      
+	filter: alpha(opacity =                                        
 		                                                         
 		                                                         
 		                                                                     
-		                            0);
+		                              0);
 	padding-right: .3em;
 	padding-bottom: .3em;
 }
@@ -1328,11 +1328,11 @@ p#clear {
 .yui-skin-sam .yui-calcontainer .yui-cal-nav-mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =                                      
+	filter: alpha(opacity =                                        
 		                                                         
 		                                                         
 		                                                                    
-		                             25);
+		                               25);
 }
 
 .yui-skin-sam .yui-calcontainer .yui-cal-nav {
@@ -1723,14 +1723,14 @@ p#clear {
 
 * html .yui-picker-bg {
 	background-image: none;
-	filter: progid :                   
+	filter: progid :                     
 		                                                        
 		                                                        
 		                           
 		                           
 		                           
 		                           
-		       DXImageTransform.Microsoft.AlphaImageLoader (          
+		         DXImageTransform.Microsoft.AlphaImageLoader (            
 		 
 		   
 		      
@@ -1750,7 +1750,8 @@ p#clear {
 		 
 		    
 		                                                                   
-		                                                        src =       
+		                                                          src =
+		        
 		                
 		                                  
 		
@@ -1765,8 +1766,8 @@ p#clear {
 		                      
 		                      
 		                      
-		           '../../build/colorpicker/assets/picker_mask.png',
-		sizingMethod =     
+		             '../../build/colorpicker/assets/picker_mask.png',
+		sizingMethod =       
 		 
 		   
 		                
@@ -1785,8 +1786,8 @@ p#clear {
 		 
 		   
 		                                                               
-		                                                              'scale'
-		);
+		                                                               
+		'scale' );
 }
 
 .yui-picker-mask {
@@ -1961,11 +1962,11 @@ p#clear {
 .yui-skin-sam .mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =                                      
+	filter: alpha(opacity =                                        
 		                                                         
 		                                                         
 		                                                                    
-		                             25);
+		                               25);
 }
 
 .yui-skin-sam .yui-panel-container {
@@ -2070,11 +2071,11 @@ p#clear {
 	_margin-left: -1px;
 	background-color: #000;
 	opacity: .12;
-	filter: alpha(opacity =                                      
+	filter: alpha(opacity =                                        
 		                                                         
 		                                                         
 		                                                                    
-		                             12);
+		                               12);
 }
 
 .yui-skin-sam .yui-dialog .ft {
@@ -2190,11 +2191,11 @@ p#clear {
 
 .yui-skin-sam .yui-tt-shadow-visible {
 	opacity: .12;
-	filter: alpha(opacity =                                      
+	filter: alpha(opacity =                                        
 		                                                         
 		                                                         
 		                                                                    
-		                             12);
+		                               12);
 }
 
 .yui-skin-sam .yui-dt-mask {
@@ -2256,11 +2257,11 @@ th.yui-dt-resizeable .yui-dt-resizerliner {
 	cursor: col-resize;
 	background-color: #CCC;
 	opacity: 0;
-	filter: alpha(opacity =                                      
+	filter: alpha(opacity =                                        
 		                                                         
 		                                                         
 		                                                                     
-		                            0);
+		                              0);
 }
 
 .yui-dt-resizerproxy {
@@ -2269,11 +2270,11 @@ th.yui-dt-resizeable .yui-dt-resizerliner {
 	z-index: 9000;
 	background-color: #CCC;
 	opacity: 0;
-	filter: alpha(opacity =                                      
+	filter: alpha(opacity =                                        
 		                                                         
 		                                                         
 		                                                                     
-		                            0);
+		                              0);
 }
 
 th.yui-dt-hidden .yui-dt-liner,td.yui-dt-hidden .yui-dt-liner,th.yui-dt-hidden .yui-dt-resizer
@@ -2369,11 +2370,11 @@ th.yui-dt-hidden .yui-dt-liner,td.yui-dt-hidden .yui-dt-liner,th.yui-dt-hidden .
 .yui-skin-sam .yui-dt-mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =                                      
+	filter: alpha(opacity =                                        
 		                                                         
 		                                                         
 		                                                                    
-		                             25);
+		                               25);
 }
 
 .yui-skin-sam .yui-dt-message {
@@ -2760,21 +2761,21 @@ tbody .yui-dt-editable {
 
 .yui-toolbar-container .yui-button-disabled .yui-toolbar-icon {
 	opacity: .5;
-	filter: alpha(opacity =                                      
+	filter: alpha(opacity =                                        
 		                                                         
 		                                                         
 		                                                                    
-		                             50);
+		                               50);
 }
 
 .yui-toolbar-container .yui-button-disabled .up,.yui-toolbar-container .yui-button-disabled .down
 	{
 	opacity: .5;
-	filter: alpha(opacity =                                      
+	filter: alpha(opacity =                                        
 		                                                         
 		                                                         
 		                                                                    
-		                             50);
+		                               50);
 }
 
 .yui-toolbar-container .yui-button a {
@@ -2872,11 +2873,11 @@ tbody .yui-dt-editable {
 	top: 0;
 	left: 0;
 	opacity: .5;
-	filter: alpha(opacity =                                      
+	filter: alpha(opacity =                                        
 		                                                         
 		                                                         
 		                                                                    
-		                             50);
+		                               50);
 }
 
 .yui-editor-container iframe {
@@ -3977,11 +3978,11 @@ h2.yui-editor-skipheader,h3.yui-editor-skipheader {
 .yui-skin-sam .yui-crop .yui-crop-mask {
 	background-color: #000;
 	opacity: .5;
-	filter: alpha(opacity =                                      
+	filter: alpha(opacity =                                        
 		                                                         
 		                                                         
 		                                                                    
-		                             50);
+		                               50);
 }
 
 .yui-skin-sam .yui-crop .yui-resize {
@@ -4748,11 +4749,11 @@ body.yui-layout {
 .yui-skin-sam .yui-menu-shadow-visible {
 	background-color: #000;
 	opacity: .12;
-	filter: alpha(opacity =                                      
+	filter: alpha(opacity =                                        
 		                                                         
 		                                                         
 		                                                                    
-		                             12);
+		                               12);
 }
 
 .yui-skin-sam .yuimenuitem-selected {
@@ -5263,20 +5264,20 @@ body.yui-layout {
 .yui-resize-hover .yui-resize-handle,.yui-resize-hidden .yui-resize-handle
 	{
 	opacity: 0;
-	filter: alpha(opacity =                                      
+	filter: alpha(opacity =                                        
 		                                                         
 		                                                         
 		                                                                     
-		                            0);
+		                              0);
 }
 
 .yui-resize-ghost {
 	opacity: .5;
-	filter: alpha(opacity =                                      
+	filter: alpha(opacity =                                        
 		                                                         
 		                                                         
 		                                                                    
-		                             50);
+		                               50);
 }
 
 .yui-resize-knob .yui-resize-handle {
@@ -5364,11 +5365,11 @@ body.yui-layout {
 
 .yui-skin-sam .yui-resize-hover .yui-resize-handle-active {
 	opacity: 1;
-	filter: alpha(opacity =                                     
+	filter: alpha(opacity =                                       
 		                                                         
 		                                                         
 		                                                                   
-		                               100);
+		                                 100);
 }
 
 .yui-skin-sam .yui-resize-proxy {
@@ -5624,21 +5625,21 @@ body.yui-layout {
 
 .yui-toolbar-container .yui-button-disabled .yui-toolbar-icon {
 	opacity: .5;
-	filter: alpha(opacity =                                      
+	filter: alpha(opacity =                                        
 		                                                         
 		                                                         
 		                                                                    
-		                             50);
+		                               50);
 }
 
 .yui-toolbar-container .yui-button-disabled .up,.yui-toolbar-container .yui-button-disabled .down
 	{
 	opacity: .5;
-	filter: alpha(opacity =                                      
+	filter: alpha(opacity =                                        
 		                                                         
 		                                                         
 		                                                                    
-		                             50);
+		                               50);
 }
 
 .yui-toolbar-container .yui-button a {
@@ -5736,11 +5737,11 @@ body.yui-layout {
 	top: 0;
 	left: 0;
 	opacity: .5;
-	filter: alpha(opacity =                                      
+	filter: alpha(opacity =                                        
 		                                                         
 		                                                         
 		                                                                    
-		                             50);
+		                               50);
 }
 
 .yui-editor-container iframe {
@@ -7444,6 +7445,27 @@ td,th {
 	border: 0;
 }
 
+.clearfix:after {
+	content: ".";
+	display: block;
+	clear: both;
+	visibility: hidden;
+	line-height: 0;
+	height: 0;
+}
+
+.clearfix {
+	display: inline-block;
+}
+
+html[xmlns] .clearfix {
+	display: block;
+}
+
+* html .clearfix {
+	height: 1%;
+}
+
 h1 {
 	font-size: 2em;
 	font-weight: bold;
@@ -7777,12 +7799,13 @@ a#asignup {
 	background-color: #19558D;
 	-ms-filter:
 		"progid:DXImageTransform.Microsoft.gradient(startColorstr='#0000FF', endColorstr='#19558D')";
-	filter: progid :         
+	filter: progid :           
 		                                                        
 		                                                        
 		                                   
 		                                   
-		                             DXImageTransform.Microsoft.gradient (    
+		                               DXImageTransform.Microsoft.gradient ( 
+		    
 		        
 		                  
 		
@@ -7796,7 +7819,8 @@ a#asignup {
 		        
 		                 
 		                                                         
-		                                                    startColorstr =   
+		                                                      startColorstr = 
+		   
 		      
 		              
 		                             
@@ -7806,7 +7830,7 @@ a#asignup {
 		              
 		                            
 		                                                             
-		                         "#0000FF", endColorstr =         
+		                           "#0000FF", endColorstr =           
 		                               
 		 
 		  
@@ -7816,7 +7840,7 @@ a#asignup {
 		 
 		      
 		                                                             
-		                                   "#19558D" );
+		                                     "#19558D" );
 	background: -webkit-gradient(linear, left top, left bottom, from(#0000FF),
 		to(#19558D) );
 	background: -moz-linear-gradient(top, #0000FF, #19558D);
@@ -7904,6 +7928,10 @@ div#layout1 div#qview-body {
 	width: 610px;
 	/*overflow-x: auto;
 */
+}
+
+#private_key {
+	margin-top: 6px;
 }
 
 #tools {
@@ -8417,11 +8445,11 @@ li.tsearch {
 	background: -moz-linear-gradient(top, #A7BBCC, #879BAD);
 	-ms-filter:
 		"progid:DXImageTransform.Microsoft.gradient(startColorstr='#A7BBCC', endColorstr='#879BAD')";
-	filter: progid :                                                     
+	filter: progid :                                                       
 		                                                        
 		                                   
 		                                   
-		                DXImageTransform.Microsoft.gradient (
+		                  DXImageTransform.Microsoft.gradient (  
 		                  
 		
 		 
@@ -8436,7 +8464,7 @@ li.tsearch {
 		  
 		       
 		                                                         
-		                                       startColorstr =            
+		                                         startColorstr =              
 		                             
 		 
 		   
@@ -8444,7 +8472,7 @@ li.tsearch {
 		              
 		                            
 		                                                             
-		                                     "#A7BBCC", endColorstr =     
+		                                       "#A7BBCC", endColorstr =       
 		               
 		                               
 		 
@@ -8453,7 +8481,7 @@ li.tsearch {
 		              
 		                             
 		                                                             
-		                        "#879BAD" );
+		                          "#879BAD" );
 	background: -webkit-gradient(linear, left top, left bottom, from(#A7BBCC),
 		to(#879BAD) );
 	background: -moz-linear-gradient(top, #A7BBCC, #879BAD);
@@ -9906,6 +9934,10 @@ div.com_like a,a.c_like {
 	margin-bottom: 10px;
 }
 
+.mb5 {
+	margin-bottom: 5px;
+}
+
 .mt5 {
 	margin-top: 5px;
 }
@@ -10199,6 +10231,10 @@ table.user_stuff {
 	background-color: #EEE;
 }
 
+.pre {
+	white-space: pre;
+}
+
 td.ar {
 	text-aligh: right;
 	aligh: right;
@@ -10320,7 +10356,8 @@ a.blgr:before {
 .ytvideo {
 	position: relative;
 	clear: both;
-	margin-right: 5px; cursor : pointer;
+	margin-right: 5px;
+	cursor: pointer;
 	border: 1px solid black;
 	width: 120px;
 	height: 90px;
@@ -10341,4 +10378,11 @@ a.blgr:before {
 
 .bg_black {
 	background-color: #000000;
+}
+
+h2.definition {
+	color: #808185;
+	background-color: #ECEFF6;
+	border: 1px solid #D4DAE8;
+	padding: 10px;
 }
